--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
+body{
+  background-color: indianred;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img{
+  max-width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title{
+  color: darkmagenta;
+  text-transform: uppercase;
+  font-size: 50px;
+  text-shadow: 5px 5px rgb(0,0,0);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card{
+ margin-top: 75px;;
 }
 
-.App-link {
-  color: #61dafb;
+.btn{
+  margin-top: 25px;;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.subtitle{
+  color: black;
+  text-shadow: 1px 1px rgb(200, 209, 201);
+}
+.h5{
+  color: #fff;
 }
