--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,38 @@
 body{
-  background-color: indianred;
+  background-color: rgb(223, 241, 199);
   text-align: center;
 }
-
-img{
+img:hover{
   max-width: 100%;
+
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
 .title{
-  color: darkmagenta;
-  text-transform: uppercase;
-  font-size: 50px;
-  text-shadow: 5px 5px rgb(0,0,0);
+color: rgb(201, 37, 58);
+text-transform: uppercase;
+font-size: 37px;
+text-shadow: 3px 3px rgb(0,0,0);
 }
-
-.card{
- margin-top: 75px;;
+.category{
+  color: rgb(6, 105, 253);
 }
-
-.btn{
-  margin-top: 25px;;
-}
-.subtitle{
-  color: black;
-  text-shadow: 1px 1px rgb(200, 209, 201);
-}
-.h5{
-  color: #fff;
+.initials{
+  color: rgb(134, 15, 51);
+  text-underline-position:auto  ;
 }
